--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
     padding: 0;
     /* font-family: var(--poppins-regular); */
 }
+.productsSection .card .cardImage{
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+}
 .productsSection .row .col-lg-3 .card{
     transform: translateY(100px);
     opacity: 0;
