--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,22 @@
-:root{
+:root {
     --poppins-regular: 'regular';
     --poppins-bold: 'bold';
 }
-*{
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     /* font-family: var(--poppins-regular); */
 }
-.productsSection .card .cardImage{
+
+.productsSection .card .cardImage {
     width: 100%;
     height: 160px;
     object-fit: cover;
 }
-.productsSection .row .col-lg-3 .card{
+
+.productsSection .row .col-lg-3 .card {
     transform: translateY(100px);
     opacity: 0;
     animation-name: slideAnim;
@@ -22,20 +25,24 @@
     animation-timing-function: cubic-bezier(0.68, -0.6, 0.32, 1.6);
     animation-fill-mode: forwards;
 }
-.productsSection .row .col-lg-3:nth-child(1n) .card{
+
+.productsSection .row .col-lg-3:nth-child(1n) .card {
     animation-delay: 0s;
 }
-.productsSection .row .col-lg-3:nth-child(2n) .card{
+
+.productsSection .row .col-lg-3:nth-child(2n) .card {
     animation-delay: 0.2s;
 }
-.productsSection .row .col-lg-3:nth-child(3n) .card{
+
+.productsSection .row .col-lg-3:nth-child(3n) .card {
     animation-delay: 0.4s;
 }
-.productsSection .row .col-lg-3:nth-child(4n) .card{
+
+.productsSection .row .col-lg-3:nth-child(4n) .card {
     animation-delay: 0.6s;
 }
 
-.productsDetailSection #pImage{
+.productsDetailSection #pImage {
     width: 90%;
     padding: 20px;
     border-radius: 50px;
@@ -44,48 +51,52 @@
 }
 
 @keyframes slideAnim {
-    from{
+    from {
         transform: translateY(100px);
         opacity: 0;
     }
-    to{
+
+    to {
         transform: translateY(0px);
         opacity: 1;
     }
 }
 
-.carousel-item{
+.carousel-item {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.fruitsSection .secOne{
+.fruitsSection .secOne {
     background-image: url(../images/sections/sec1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
 }
-.fruitsSection .secTwo{
+
+.fruitsSection .secTwo {
     background-image: url(../images/sections/sec2.jpg);
     background-repeat: no-repeat;
     background-size: 140%;
     background-position: left;
 }
-.fruitsSection .secThree{
+
+.fruitsSection .secThree {
     background-image: url(../images/sections/sec3.jpg);
     background-repeat: no-repeat;
     background-size: 130%;
     background-position: left;
 }
 
-.sliderSection{
+.sliderSection {
     height: 80vh;
     background-color: grey;
     position: relative;
     overflow: hidden;
 }
-.sliderSection svg{
+
+.sliderSection svg {
     position: absolute;
     bottom: -2px;
     left: 0;
@@ -98,11 +109,11 @@
 }
 
 .carousel-control-prev-icon,
-.carousel-control-next-icon{
+.carousel-control-next-icon {
     filter: invert(1);
 }
 
-.error{
+.error {
     background-color: rgb(255, 206, 206);
     text-align: left;
     padding: 5px 10px;
@@ -113,15 +124,77 @@
     margin-bottom: 1.0rem;
     display: none;
 }
-.error.active{
+
+.error.active {
     display: block;
 }
 
 .custom-popover {
-  --bs-popover-max-width: 200px;
-  --bs-popover-border-color: var(--bd-primary);
-  --bs-popover-header-bg: var(--bs-primary);
-  --bs-popover-header-color: var(--bs-white);
-  --bs-popover-body-padding-x: 1rem;
-  --bs-popover-body-padding-y: .5rem;
+    --bs-popover-max-width: 200px;
+    --bs-popover-border-color: var(--bd-primary);
+    --bs-popover-header-bg: var(--bs-primary);
+    --bs-popover-header-color: var(--bs-white);
+    --bs-popover-body-padding-x: 1rem;
+    --bs-popover-body-padding-y: .5rem;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card {
+    opacity: 0;
+    transform: translateY(100px);
+    animation-name: itemSlideUpAnim;
+    animation-duration: 0.6s;
+    animation-timing-function: cubic-bezier(0.68, -0.6, 0.32, 1.6);
+    animation-fill-mode: forwards;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(1n) {
+    animation-delay: 0.0s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(2n) {
+    animation-delay: 0.1s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(3n) {
+    animation-delay: 0.2s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(4n) {
+    animation-delay: 0.3s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(5n) {
+    animation-delay: 0.4s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(6n) {
+    animation-delay: 0.5s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(7n) {
+    animation-delay: 0.6s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(8n) {
+    animation-delay: 0.7s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(9n) {
+    animation-delay: 0.8s;
+}
+
+#offcanvasRight .offcanvas-body #addToCartContainer .card:nth-child(10n) {
+    animation-delay: 0.9s;
+}
+
+@keyframes itemSlideUpAnim {
+    from {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
